add one reference

--- a/madlib_the_sql.tex
+++ b/madlib_the_sql.tex
@@ -856,7 +856,7 @@ analysis. The increasing use of text analysis in enterprise
 applications has increased the expectation of customers and the
 opportunities for processing big data. The state-of-the-art text
 analysis tools are based on statistical models and
-algorithms~\cite{}. With the goal to become a framework for
+algorithms~\cite{nlp}. With the goal to become a framework for
 statistical methods for data analysis at scale, it is important for
 MADLib to include basic statistical methods to implement text analysis
 tasks.
